objects/AutoNumber__c/AutoNumber__c.object-meta.xml
<CustomObject>
    <label>AutoNumber</label>
    <nameField>
        <label>AutoNumber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>