objects/AutoNumber__c/fields/Course_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Course_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Invoice</label>
    <referenceTo>Course_Invoice__c</referenceTo>
    <relationshipLabel>AutoNumbers</relationshipLabel>
    <relationshipName>AutoNumbers</relationshipName>
    <type>Lookup</type>
</CustomField>