objects/AutoNumber__c/fields/Service_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Invoice_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Service Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>